ecommerce-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-registry
  namespace: ecommerce-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:3
        ports:
        - containerPort: 5000
          name: registry
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: ecommerce-registry
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: registry
  selector:
    app: registry
